test/expected/set_expli.out
cdecl> set expli
           ^
5: error: "expli": ambiguous set option; could be explicit-ecsu or explicit-int
